--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,12 @@ local.properties
 .loadpath
 .recommenders
 
+### IntelliJ IDEA ###
+out/
+!**/src/main/**/out/
+!**/src/test/**/out/
+.idea/*.iml
+
 # External tool builders
 .externalToolBuilders/
 
