--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,9 @@ local.properties
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
-.idea/*.iml
+/.idea
+/.idea/*
+*.iml
 
 # External tool builders
 .externalToolBuilders/
